Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Oct-01 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew/eeschema
	Cross-probing pcbnew to eeschema:
		A left click on a pad in pcbnew moves the eeschema cursor on the corresponding component pin
		A left click on a footprint ref or value in pcbnew moves the eeschema cursor on the corresponding component ref or value
		A left ckick on a footprint moves the eeschema cursor on the corresponding component anchor
+ pcbnew
	removed drc.cpp change line 584, and translate comments in english.
	nothing broken:
		-> a pad with its netcode = 0 means the pad ** must be left unconnected ** (not attached to *  a net).
		-> a track with its netcode = 0 means the track is not attached to a net (cannot be connected to any pad).


2007-Sep-30 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    Added dedicated Show() function for SEGVIA.  Enhanced BOARD_ITEM::MenuText()
    for SEGVIA.


2007-Sep-29 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * drc.c made a change near line 584 to comment out pt_pad->m_NetCode test against 
    zero.  This was preventing me from laying out my board.  It's possible that 
    this broke something else, but it is also clear that something was broke before 
    this change, because I could not put down some tracks.
  * beautification, house keeping.    



2007-Sep-29 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew
	create new file onleftclick.cpp
	move onleftcligk() and onleftDcligk() from edit.cpp to onleftclick.cpp
	
