@@ -35,8 +35,7 @@ class wxBoxSizer;
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_KICONFIGCVPCBFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_KICONFIGCVPCBFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_KICONFIGCVPCBFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_KICONFIGCVPCBFRAME_TITLE _("Dialog")
 #define SYMBOL_KICONFIGCVPCBFRAME_IDNAME ID_DIALOG
 #define SYMBOL_KICONFIGCVPCBFRAME_SIZE wxSize(400, 300)
