@@ -39,8 +39,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_KIDISPLAYOPTIONSFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_KIDISPLAYOPTIONSFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_KIDISPLAYOPTIONSFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_KIDISPLAYOPTIONSFRAME_TITLE _("Options")
 #define SYMBOL_KIDISPLAYOPTIONSFRAME_IDNAME ID_DIALOG
 #define SYMBOL_KIDISPLAYOPTIONSFRAME_SIZE wxSize(400, 300)
