@@ -49,8 +49,7 @@
 #define ID_RADIOBOX2 10005
 #define ID_ANNOTATE_CMP 10003
 #define ID_DEANNOTATE_CMP 10004
-// #define SYMBOL_WINEDA_ANNOTATEFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_ANNOTATEFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_ANNOTATEFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_ANNOTATEFRAME_TITLE _("EESchema Annotation")
 #define SYMBOL_WINEDA_ANNOTATEFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_ANNOTATEFRAME_SIZE wxSize(400, 300)
