@@ -54,8 +54,7 @@
 #define ID_CHECKBOX_FIELD6 10012
 #define ID_CHECKBOX_FIELD7 10013
 #define ID_CHECKBOX_FIELD8 10014
-// #define SYMBOL_WINEDA_BUILD_BOM_FRAME_STYLE wxDEFAULT_DIALOG_STYLE|wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxSTAY_ON_TOP|wxCLOSE_BOX
-#define SYMBOL_WINEDA_BUILD_BOM_FRAME_STYLE wxDEFAULT_DIALOG_STYLE|wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_BUILD_BOM_FRAME_STYLE wxDEFAULT_DIALOG_STYLE|wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_BUILD_BOM_FRAME_TITLE _("List of Material")
 #define SYMBOL_WINEDA_BUILD_BOM_FRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_BUILD_BOM_FRAME_SIZE wxSize(400, 300)
