@@ -41,8 +41,7 @@ class wxSpinCtrl;
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_WINEDA_CREATECMPDIALOG_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxSTAY_ON_TOP|wxCLOSE_BOX
-#define SYMBOL_WINEDA_CREATECMPDIALOG_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_CREATECMPDIALOG_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_CREATECMPDIALOG_TITLE _("Component Creation")
 #define SYMBOL_WINEDA_CREATECMPDIALOG_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_CREATECMPDIALOG_SIZE wxSize(400, 300)
