@@ -48,8 +48,7 @@ class wxNotebook;
 #define ID_CHECKBOX_SHOW_FILED 10010
 #define ID_CHECKBOX_FILED_ORIENT 10011
 #define ID_RESTORE_CMP_DEFAULTS 10006
-// #define SYMBOL_WINEDA_COMPONENTPROPERTIESFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_COMPONENTPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_COMPONENTPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_COMPONENTPROPERTIESFRAME_TITLE _("Component properties")
 #define SYMBOL_WINEDA_COMPONENTPROPERTIESFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_COMPONENTPROPERTIESFRAME_SIZE wxSize(400, 300)
