@@ -36,8 +36,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_WINEDA_LABELPROPERTIESFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_LABELPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_LABELPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_LABELPROPERTIESFRAME_TITLE _("Dialog")
 #define SYMBOL_WINEDA_LABELPROPERTIESFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_LABELPROPERTIESFRAME_SIZE wxSize(400, 300)
