@@ -46,8 +46,7 @@
 #define ID_LIST_LIBS 10005
 #define ID_TEXTCTRL 10007
 #define ID_LIB_PATH_SEL 10008
-// #define SYMBOL_KICONFIGEESCHEMAFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_KICONFIGEESCHEMAFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_KICONFIGEESCHEMAFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_KICONFIGEESCHEMAFRAME_TITLE _("Dialog")
 #define SYMBOL_KICONFIGEESCHEMAFRAME_IDNAME ID_DIALOG
 #define SYMBOL_KICONFIGEESCHEMAFRAME_SIZE wxSize(400, 300)
