@@ -53,8 +53,9 @@ class wxStaticLine;
 #define ID_ERASE_DRC_MARKERS 10003
 #define ID_PANEL1 10005
 #define ID_RESET_MATRIX 10007
-// #define SYMBOL_WINEDA_ERCFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_ERCFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+
+#define SYMBOL_WINEDA_ERCFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
+
 #define SYMBOL_WINEDA_ERCFRAME_TITLE _("EESchema Erc")
 #define SYMBOL_WINEDA_ERCFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_ERCFRAME_SIZE wxDefaultSize
