@@ -35,8 +35,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_WINEDA_FINDFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_FINDFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_FINDFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_FINDFRAME_TITLE _("EESchema Locate")
 #define SYMBOL_WINEDA_FINDFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_FINDFRAME_SIZE wxSize(400, 300)
