@@ -51,8 +51,7 @@ class wxSpinCtrl;
 #define ID_TEXTCTRL 10008
 #define ID_TEXTCTRL1 10009
 #define ID_SPINCTRL 10010
-// #define SYMBOL_WINEDA_SETOPTIONSFRAME_STYLE wxDEFAULT_DIALOG_STYLE|wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxSTAY_ON_TOP|wxCLOSE_BOX
-#define SYMBOL_WINEDA_SETOPTIONSFRAME_STYLE wxDEFAULT_DIALOG_STYLE|wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_SETOPTIONSFRAME_STYLE wxDEFAULT_DIALOG_STYLE|wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_SETOPTIONSFRAME_TITLE _("General Options")
 #define SYMBOL_WINEDA_SETOPTIONSFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_SETOPTIONSFRAME_SIZE wxSize(400, 300)
