@@ -61,8 +61,7 @@ class wxSpinCtrl;
 #define ID_RADIOBOX 10009
 #define ID_RADIOBOX1 10012
 #define ID_RADIOBOX2 10013
-// #define SYMBOL_WINEDA_PINPROPERTIESFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_PINPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_PINPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_PINPROPERTIESFRAME_TITLE _("Pin properties")
 #define SYMBOL_WINEDA_PINPROPERTIESFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_PINPROPERTIESFRAME_SIZE wxSize(400, 300)
