@@ -39,8 +39,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_WINEDA_DISPLAYOPTIONSDIALOG_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_DISPLAYOPTIONSDIALOG_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_DISPLAYOPTIONSDIALOG_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_DISPLAYOPTIONSDIALOG_TITLE _("Display Options")
 #define SYMBOL_WINEDA_DISPLAYOPTIONSDIALOG_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_DISPLAYOPTIONSDIALOG_SIZE wxSize(400, 300)
