@@ -39,8 +39,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_WINEDA_TEXTMODPROPERTIESFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_TEXTMODPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_TEXTMODPROPERTIESFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_TEXTMODPROPERTIESFRAME_TITLE _("TextMod properties")
 #define SYMBOL_WINEDA_TEXTMODPROPERTIESFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_TEXTMODPROPERTIESFRAME_SIZE wxSize(400, 300)
