@@ -39,8 +39,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_KICONFIGPCBNEWFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_KICONFIGPCBNEWFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_KICONFIGPCBNEWFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_KICONFIGPCBNEWFRAME_TITLE _("Dialog")
 #define SYMBOL_KICONFIGPCBNEWFRAME_IDNAME ID_DIALOG
 #define SYMBOL_KICONFIGPCBNEWFRAME_SIZE wxSize(400, 300)
