@@ -34,8 +34,7 @@
 
 ////@begin control identifiers
 #define ID_DIALOG 10000
-// #define SYMBOL_WINEDA_PCBFINDFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_PCBFINDFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_PCBFINDFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_PCBFINDFRAME_TITLE _("Find")
 #define SYMBOL_WINEDA_PCBFINDFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_PCBFINDFRAME_SIZE wxSize(400, 300)
