@@ -50,7 +50,7 @@
 ////@begin control identifiers
 #define ID_DIALOG 10000
 // #define SYMBOL_WINEDA_ZONEFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxSTAY_ON_TOP|wxCLOSE_BOX
-#define SYMBOL_WINEDA_ZONEFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_ZONEFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_ZONEFRAME_TITLE _("Fill Zones Options")
 #define SYMBOL_WINEDA_ZONEFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_ZONEFRAME_SIZE wxSize(400, 300)
