@@ -47,8 +47,7 @@ class wxBoxSizer;
 #define ID_PRINT_SETUP 10001
 #define ID_PRINT_PREVIEW 10002
 #define ID_PRINT_EXECUTE 10003
-// #define SYMBOL_WINEDA_PRINTFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX
-#define SYMBOL_WINEDA_PRINTFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX
+#define SYMBOL_WINEDA_PRINTFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_PRINTFRAME_TITLE _("Print")
 #define SYMBOL_WINEDA_PRINTFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_PRINTFRAME_SIZE wxSize(400, 300)
