@@ -46,8 +46,7 @@ class wxBoxSizer;
 #define ID_PRINT_EXECUTE 10002
 #define ID_TEXTCTRL 10001
 #define ID_TEXTCTRL1 10006
-// #define SYMBOL_WINEDA_PRINTSVGFRAME_STYLE wxCAPTION|wxRESIZE_BORDER|wxSYSTEM_MENU|wxCLOSE_BOX|wxFRAME_FLOAT_ON_PARENT
-#define SYMBOL_WINEDA_PRINTSVGFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|wxFRAME_FLOAT_ON_PARENT
+#define SYMBOL_WINEDA_PRINTSVGFRAME_STYLE wxCAPTION|wxSYSTEM_MENU|wxCLOSE_BOX|wxFRAME_FLOAT_ON_PARENT|MAYBE_RESIZE_BORDER
 #define SYMBOL_WINEDA_PRINTSVGFRAME_TITLE _("Create SVG file")
 #define SYMBOL_WINEDA_PRINTSVGFRAME_IDNAME ID_DIALOG
 #define SYMBOL_WINEDA_PRINTSVGFRAME_SIZE wxSize(400, 300)
