@@ -4,6 +4,18 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+
+2007-Oct-2 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++ all
+    The lack of border resizing in dialogs has been a problem.  In my world, 
+    dialog boxes are resizable.  I use large fonts, I like to see stuff.
+    So now for __UNIX__ they are resizeable, for windows not.
+    See fctsys.h and the #define for MAYBE_RESIZE_BORDER.  For windows it defaults
+    to zero which means resizeable is not featured.  A compiler command line
+    option of "USE_RESIZE_BORDER" can override this windows default.
+    
+
 2007-Oct-01 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 + pcbnew/eeschema
